--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -14,23 +14,21 @@ const projects = collectionProjects.map(({ data, id, collection }) => {
 });
 ---
 
-<div class="flex flex-col gap-y-16">
+<div class="grid grid-cols-1 sm:grid-cols-2 gap-x-6 gap-y-16">
   {
     projects.map(({ slug, title, description, roles, thumbnail }) => (
-      <a href={slug} class="block size-full group">
-        <article class="flex flex-col space-x-0 space-y-8 md:flex-row md:space-x-8 md:space-y-0">
-          <div class="w-full md:w-1/2">
-            <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
-              <img
-                alt={title}
-                src={thumbnail}
-                loading="lazy"
-                class="object-cover object-top w-full h-56 transition-transform duration-500 sm:h-full md:scale-110 md:group-hover:scale-105"
-              />
-            </div>
+      <a href={slug} class="block size-full group rounded-xl bg-purple-100/70 dark:bg-purple-950/15">
+        <article class="flex flex-col space-x-0 space-y-8">
+          <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1">
+            <img
+              alt={title}
+              src={thumbnail}
+              loading="lazy"
+              class="object-contain w-full h-full transition-transform duration-500 scale-110 group-hover:scale-105"
+            />
           </div>
 
-          <div class="w-full md:w-1/2 md:max-w-lg">
+          <div class="w-full px-4 pb-6">
             <h3 class="text-2xl font-bold text-balance transition-colors duration-300 text-gray-800 dark:text-gray-100 group-hover:text-purple-600 group-hover:dark:text-purple-400">
               {title}
             </h3>
@@ -38,7 +36,7 @@ const projects = collectionProjects.map(({ data, id, collection }) => {
             <div class="flex flex-wrap mt-2">
               <Roles value={roles} />
 
-              <p class="mt-2 text-gray-700 text-pretty dark:text-gray-400">{description}</p>
+              <p class="mt-2 text-gray-700 text-pretty dark:text-gray-300">{description}</p>
             </div>
           </div>
         </article>
