--- a/src/pages/[lang]/projects/[slug].astro
+++ b/src/pages/[lang]/projects/[slug].astro
@@ -23,9 +23,9 @@ const thumbnail = `/projects/${Astro.params.slug}.webp`;
 
 <Layout title={project.data.title} description={project.data.description} thumbnail={thumbnail}>
   <SectionContainer
-    class="py-16 md:py-36 prose dark:prose-invert prose-headings:text-purple-600 dark:prose-headings:text-purple-400 marker:text-purple-600 dark:marker:text-purple-400 prose-p:text-pretty prose-headings:text-balance"
+    class="py-14 prose dark:prose-invert prose-headings:text-purple-600 dark:prose-headings:text-purple-400 marker:text-purple-600 dark:marker:text-purple-400 prose-p:text-pretty prose-headings:text-balance"
   >
-    <img src={thumbnail} alt={title} class="rounded-lg object-cover size-full m-0" />
+    <img src={thumbnail} alt={title} class="rounded-lg object-cover size-full m-0 max-w-2xl mx-auto" />
     <h1 class="my-6">{title}</h1>
     <Roles value={roles} class="list-none m-0 p-0 *:m-0 *:p-0" />
     <p>{description}</p>
