--- a/src/pages/en.astro
+++ b/src/pages/en.astro
@@ -4,10 +4,12 @@ import Experience from "@/components/Experience.astro";
 import Hero from "@/components/Hero.astro";
 import Projects from "@/components/Projects.astro";
 import SectionContainer from "@/components/SectionContainer.astro";
+import Skills from "@/components/Skills.astro";
 import TitleSection from "@/components/TitleSection.astro";
 import { FULL_NAME } from "@/i18n";
 import BriefcaseIcon from "@/icons/briefcase.svg";
 import CodeIcon from "@/icons/code.svg";
+import HandClickIcon from "@/icons/hand-click.svg";
 import UserCheckIcon from "@/icons/user-check.svg";
 import Layout from "@/layouts/Layout.astro";
 ---
@@ -61,14 +63,20 @@ import Layout from "@/layouts/Layout.astro";
           evaluate the <strong>success of initiatives through ROI metrics</strong>, ensuring that every effort added
           real value.
         </p>
-
-        <p>
-          Right now, I'm focused on sharpening my technical skills, especially in <strong
-            >FrontEnd development with HTML, CSS, and JavaScript</strong
-          >. This portfolio is a reflection of my ongoing learning journey and passion for creating impactful digital
-          experiences.
-        </p>
       </AboutMe>
+    </SectionContainer>
+
+    <SectionContainer id="skills">
+      <TitleSection>
+        <HandClickIcon class="size-9" />
+        Skills
+      </TitleSection>
+
+      <section class="flex flex-col gap-7">
+        <Skills type="UX/UI" title="UX/UI" />
+        <Skills type="project-management" title="Management" />
+        <Skills type="methodologies" title="Methodologies" />
+      </section>
     </SectionContainer>
   </div>
 </Layout>
