add main og image

--- a/src/pages/en.astro
+++ b/src/pages/en.astro
@@ -15,6 +15,7 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout
+  thumbnail="/thumbnail-en.webp"
   title={`${FULL_NAME} - Product Design & Management Portfolio`}
   description="Explore my projects as a Product Owner, UX/UI Designer, and Product Lead, showcasing innovative solutions and impactful designs."
 >
