--- a/src/pages/es.astro
+++ b/src/pages/es.astro
@@ -15,6 +15,7 @@ import Skills from "@/components/Skills.astro";
 ---
 
 <Layout
+  thumbnail="/thumbnail-es.webp"
   title={`${FULL_NAME} - Portafolio de Diseño y Gestión de Productos`}
   description="Explora mis proyectos como Product Owner, Diseñador UX/UI y Líder de Producto, mostrando soluciones innovadoras y diseños impactantes."
 >
