--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ import { getLanguages } from "@/i18n";
 
 interface Props {
   title: string;
-  thumbnail?: string;
+  thumbnail: string;
   description: string;
 }
 
@@ -26,7 +26,7 @@ const languages = getLanguages(Astro);
     <meta property="og:title" content={title} />
     <meta name="description" content={description} />
     <meta property="og:description" content={description} />
-    {thumbnail && <meta property="og:image" content={thumbnail} />}
+    <meta property="og:image" content={thumbnail} />
 
     {languages.all.map(({ url, key }) => <link rel="alternate" href={url} hreflang={key} />)}
     <ClientRouter />
